# edgelessdb

./: .clang-format  .clang-tidy  .gitmodules  .lycheeignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.build-base  LICENSE  README.md  ROADMAP.md  build-mariadb.sh  emariadbd.cpp  go.mod  go.sum  mariadb.patch  my.cnf
.github/workflows/: links.yml  unittests.yml  vale.yml
charts/: Chart.yaml  README.md  values.yaml
charts/templates/: edgelessdb.yaml  serviceaccount.yaml
cmd/edb/: enclavemain.go  error.go  exit.c  getnumtcs.go  invokemain.go  main.go  mariadbd.go  restart.go  restartenclave.go  run.go
demo/: README.md  edb-enclave.json  edgelessdb-sgx.json  genkeys-addtomanifest.py  genkeys.sh  manifest-template.json  marblerun-manifest.json
dockerfiles/: Dockerfile.edb  Dockerfile.emariadb
docs/: docusaurus.config.js  sidebars.js
docs/docs/: intro.md
docs/docs/advanced/: marblerun.md  recovery.md
docs/docs/getting-started/: concepts.md  install.md  quickstart-azure.md  quickstart-sgx.md  quickstart-simulation.md
docs/docs/reference/: configuration.md  manifest.md
docs/styles/Vocab/edgeless/: accept.txt
edb/: integration_test.go
edb/core/: config.go  config_test.go  core.go  core_test.go  key.go  key_test.go
edb/db/: interface.go  marblerun.go  marblerun_test.go  mariadb.go  mariadb_gen_bootstrap.sh  mariadbbootstrap.go  mock.go  tidb.go  util.go  util_test.go
edb/rt/: console.go  interface.go  mock.go
edb/server/: server.go  server_test.go
edb/util/: util.go  util_test.go
host/: emain.edl  host.cc
src/: build_golib.sh  edb  emain.cc  enclave.conf  entry.sh  invokemain.cc  mariadb-frm-files.patch  mariadb-rocksdb-logging.patch  mariadb.patch  mysqld_edb.cc  mysqld_main.cc  oe_internal.h  rocksdb.cc  rocksdb.h  rocksdb.patch  store.h  stubs.c  syscall_file.cc  syscall_file.h  syscall_handler.cc  syscall_handler.h  syscall_hook.cc  syscall_test.cc  test_manifest.json
